[package]
name = "learn-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
cargo-watch = "8.4.1"
serde = { version = "1", feature = ["derive"] }
serde_json = "1"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
